# NRAM

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  translate-comments.js
.github/workflows/: ci.yml
app/components/: Layout.tsx  MemoryCard.tsx  Navbar.tsx  WalletConnect.tsx  WalletProvider.tsx
app/config/: environment.ts
app/hooks/: useMemoryMarket.ts
app/middleware/: metricsMiddleware.ts
app/pages/: _app.tsx  about.tsx  analytics.tsx  index.tsx  market.tsx  marketplace.tsx  mint.tsx  submit-validation.tsx  validate.tsx  validator-dashboard.tsx  validator-registration.tsx
app/services/: analyticsService.ts  apiService.ts  mintService.ts  validationService.ts
app/styles/: globals.css
app/types/: memory.ts
app/utils/: addressUtils.ts  environment.ts  ipfsUtils.ts  neuralUtils.ts  solanaUtils.ts  walletUtils.ts
contracts/: Anchor.toml
contracts/programs/memory_nft/: Cargo.toml
contracts/programs/memory_nft/src/: lib.rs
contracts/programs/memory_validator/: Cargo.toml
contracts/programs/memory_validator/src/: lib.rs
contracts/programs/nram_token/: Cargo.toml
contracts/programs/nram_token/src/: lib.rs
contracts/tests/: memory_nft.ts  memory_validator.ts
docs/: CODE_OF_CONDUCT.md  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_IMPLEMENTATION.md
docs/blockchain/: INTEGRATION.md  SMART_CONTRACTS.md
docs/deployment/: DEPLOYMENT.md
docs/development/: CODE_OF_CONDUCT.md  (+3 more)
monitoring/: README.md  docker-compose.yml
(+31 files in other folders)
