[package]
name = "memory_nft"
version = "0.1.0"
description = "Memory NFT program for NeuraMint platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memory_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.16"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] } 