[package]
name = "nram_token"
version = "0.1.0"
description = "NRAM Token program for NeuraMint platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nram_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.16" 